1.8.2. Fix add / edit header align for bookmark. 1.8.3. Add change logos.

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -178,6 +178,7 @@ code {
     font-weight: 500;
     font-size: 1.25rem;
     margin: auto;
+    text-align: center;
 }
 
 .modal-header {
